# n-dim_vis

./: .gitignore
docs/: ARCHITECTURE.md  BUILD-web.md  INDEX.md  NDCALC-INTEGRATION.md  PERFORMANCE.md  README.md  UI_STATE_IMPLEMENTATION.md  WASM_TESTING_AND_OVERLAY_NOTES.md  example-emscripten-build.sh  integration-plan.md  original.md
docs/OPERATIONS/: PHASE1_NOTES.md  overview.md
docs/hypervis/: HYPERVIZ-API.md  HYPERVIZ-ARCHITECTURE.md  HYPERVIZ-IMPLEMENTATION-PLAN.md  HYPERVIZ-INTEGRATION-PLAN.md  HYPERVIZ-MATH-SPEC.md  HYPERVIZ-TESTING-PERF.md  HYPERVIZ-UX.md  HYPERVIZ-VISION.md
docs/latex/: ARCHITECTURE.md  LATEX_TRANSLATOR_NOTES.md  OVERALL.md  OVERVIEW.md  STATE_AND_APIS.md  UIX.md  extras.md  latex-design.md  overview1.md
ndcalc-core/: CMakeLists.txt  README.md
ndcalc-core/include/ndcalc/: api.h  autodiff.h  bytecode.h  compiler.h  finite_diff.h  latex.h  parser.h  vm.h
ndcalc-core/src/: api.cpp  autodiff.cpp  bytecode.cpp  compiler.cpp  finite_diff.cpp  latex.cpp  parser.cpp  vm.cpp
ndcalc-core/tests/: CMakeLists.txt  test_api.cpp  test_autodiff.cpp  test_comprehensive.cpp  test_latex.cpp  test_parser.cpp  test_vm.cpp
ndcalc-core/wasm/: CMakeLists.txt  build.sh  generate-types.js  wasm_bindings.cpp
ndvis-core/: CMakeLists.txt
ndvis-core/include/ndvis/: api.h  geometry.hpp  hyperplane.hpp  overlays.hpp  pca.hpp  projection.hpp  qr.hpp  rotations.hpp  types.hpp
ndvis-core/include/ndvis/detail/: jacobi.hpp
ndvis-core/src/: api.cpp  geometry.cpp  hyperplane.cpp  jacobi.cpp  overlays.cpp  pca.cpp  projection.cpp  qr.cpp  rotations.cpp
ndvis-core/tests/: core_tests.cpp
ndvis-render-headless/: CMakeLists.txt
ndvis-render-headless/include/: renderer.hpp
ndvis-render-headless/src/: renderer.cpp
ndvis-web/: index.html  package-lock.json  package.json  vite.config.ts
ndvis-web/src/: App.tsx  vite-env.d.ts
ndvis-web/src/__tests__/: hyperviz-wasm.spec.ts  hyperviz.spec.ts  latex.spec.ts
ndvis-web/src/gpu/: WEBGPU_INTERFACE.md  renderer.ts  webgl2-renderer.ts  webgpu-renderer.ts
ndvis-web/src/gpu/shaders/: project_to3d.wgsl  rotate_givens.wgsl  slice_hyperplane.wgsl
ndvis-web/src/math/: latex.ts
ndvis-web/src/state/: appState.ts
ndvis-web/src/ui/: AppShell.tsx  CalculusPanel.tsx  ControlsPanel.tsx  ExportPanel.tsx  FunctionPanel.tsx  HyperplanePanel.tsx  SceneViewport.tsx  layout.css
ndvis-web/src/utils/: export.ts
ndvis-web/src/wasm/: hyperviz.ts  ndvis.ts
ndvis-web/src/wasm/ndcalc/: index.d.ts  index.js  ndcalc.d.ts  ndcalc_wasm.js  ndcalc_wasm.wasm
scripts/: example-emscripten-build.sh
